--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,16 @@ header{
     flex-direction: row;
 }
 
+@media(max-width:768px){
+    .header__nav{
+        display: none;
+    }
+
+}
+
+
+
+
 
 .header__logo{
     width: 10rem;
@@ -97,38 +107,133 @@ header{
 
 /*promociones*/
 
-.promociones{
-    text-align: center;
-    padding-top: 3rem;
-    font-size: 2rem;
+.promociones h2{
+   text-align: center;
+   justify-content:flex-start;
+   align-items: center;
+   align-items: center;
+   font-size: 2.5rem;
+   padding-top: 3rem;
 }
 
 .promociones__contenido{
-    display: grid;
-    grid-template-columns:repeat(3, 1fr);
-    text-align: center;
-    height: 40rem;
-    width: auto;
-    margin-left: 2rem;
-    margin-right: 2rem;
-    gap: 2rem;
-    align-items: center;
-    justify-content: center;
-    font-family: var(--fuente-principal);
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  gap: 2.5rem;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  margin-left: 4rem;
+  margin-right: 4rem;
+  padding-top: 3rem;
+   
 }
 
+@media(max-width:768px){
+    .promociones__contenido{
+        grid-template-columns: repeat(1,1fr);
+        margin-left: 1.5rem;
+        margin-right: 1.5rem;
+    }   
+}
+
+
 .promociones__contenido__img{
-    width: 100rem;
-    height: 25rem;
+    width: 38rem;
+    height: 30rem;
     max-width: 100%;
     max-height: 100%;
-    padding-bottom: 10rem;
 }
 
 .promociones__contenido__img:hover{
     transform: scale(1.1);
 }
 
+/*Videos*/
+.Video_contenedor{
+    align-items: center;
+    text-align: center;
+    height: 50rem ;
+    max-width: 100%;
+    max-height: 100%;
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
+
+.Video_contenedor_video{
+    width: 100%;
+    height: 40rem;
+}
+
+
+
+.Video_contenedor__titulo{
+    font-size: 2.5rem;
+    padding-bottom: 1rem;
+    text-align: center;
+}
+
+/*hot-sale*/
+.hot-sale{
+    text-align: center;
+    align-items: center;
+    padding-bottom: 3rem;
+}
+
+.hot-sale__header{
+    padding-bottom: 2rem;
+    justify-content: baseline;
+    text-align: center;
+    align-items: center;
+}
+
+.hot-sale_titulo{
+    text-align: center;
+    align-content: center;
+    padding-bottom: 2rem;
+    padding-top: 2rem;
+}
+
+.hot-sale__icono{
+    width: 10rem;
+    height: 10rem;
+}
+
+.hot-sale__contenedor{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 4rem;
+    padding-right: 2rem;
+    padding-left: 2rem;
+}
+
+@media(max-width:768px){
+    .hot-sale__contenedor{
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+
+.hot-sale__contenedor a{
+    border: 1px black solid;
+    border-radius: 1rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+.hot__sale__productos{
+    width: 30rem;
+    height: 30rem;
+    max-width: 100%;
+    max-height: 100%;
+    align-items: center;
+    text-align: center;
+    border: 1px black solid;
+}
+
+.hot__sale__productos__img{
+    width: 20rem;
+    height: 20rem;
+}
 
 /*Footer*/
 
